# tax-calc

./: .gitignore  ERROR_LOGGING.md  QUICKSTART.md  README.md  TESTING.md  USER_RESULTS_GUIDE.md  app.py  main.py  pyproject.toml
docs/: PROPERTY_TAX_DETAILS.md  README.md  RS_GE_API_FEASIBILITY.md  RS_GE_API_INQUIRY_LETTER.md  RS_GE_API_TEST_RESULTS.md  RS_GE_INTEGRATION_PLAN.md  RS_GE_INTEGRATION_STATUS.md  TAX_RULES.md  UI_ORDER_ANALYSIS.md
errors/: errors.jsonl
pages/: error_logs.py  tax_rules.py
scripts/: README.md  clear_logs.py  setup_db.py  start_app.py  stop_app.py  test_app.py  test_complex_user.py  test_example_profiles.py  test_file_importers.py  test_profile_save_load.py  test_rs_ge_modules.py  test_user_scenario.py  verify_db_profiles.py  view_logs.py
tax_core/: __init__.py  calculators.py  error_logger.py  example_profiles.py  models.py  profile_db.py
tax_core/importers/: __init__.py  base_importer.py  csv_importer.py  excel_importer.py
tax_core/rs_ge/: __init__.py  api_client.py  auth.py  data_mapper.py  exceptions.py
