[project]
name = "tax-calc"
version = "0.1.0"
description = "Georgian Personal Tax Calculator - Unofficial estimation tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.28.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.2",
    "python-dotenv>=1.0.0",
]
